--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -97,6 +97,7 @@
 \usepackage{xcolor,hyperref}
 \usepackage{subcaption}
 \usepackage{graphicx}
+\usepackage{siunitx}
 
 \hypersetup{
   pdftitle={High Quality Hypergraph Partitioning via Max-Flow-Min-Cut Computations},
